// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser indexed assignment bracketed assignment operator 1`] = `
[
  IndexedSet {
    "closingSquare": {
      "isReserved": false,
      "kind": "RightSquare",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "]",
    },
    "indexes": [
      Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 0,
        },
      },
    ],
    "obj": Variable {
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "someArray",
      },
    },
    "value": Binary {
      "left": IndexedGet {
        "closingSquare": {
          "isReserved": false,
          "kind": "RightSquare",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "]",
        },
        "indexes": [
          Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 0,
            },
          },
        ],
        "obj": Variable {
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "someArray",
          },
        },
        "optional": false,
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 3,
        },
      },
      "token": {
        "isReserved": false,
        "kind": "StarEqual",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "*=",
      },
    },
  },
]
`;

exports[`parser indexed assignment bracketed assigns anonymous functions 1`] = `
[
  IndexedSet {
    "closingSquare": {
      "isReserved": false,
      "kind": "RightSquare",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "]",
    },
    "indexes": [
      Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 0,
        },
      },
    ],
    "obj": Variable {
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "someArray",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [],
      "returns": 10,
    },
  },
]
`;

exports[`parser indexed assignment bracketed assigns boolean expressions 1`] = `
[
  IndexedSet {
    "closingSquare": {
      "isReserved": false,
      "kind": "RightSquare",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "]",
    },
    "indexes": [
      Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 0,
        },
      },
    ],
    "obj": Variable {
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "someArray",
      },
    },
    "value": Binary {
      "left": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": BrsBoolean {
          "inArray": false,
          "kind": 2,
          "value": true,
        },
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": BrsBoolean {
          "inArray": false,
          "kind": 2,
          "value": false,
        },
      },
      "token": {
        "isReserved": true,
        "kind": "And",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "and",
      },
    },
  },
]
`;

exports[`parser indexed assignment dotted assignment operator 1`] = `
[
  DottedSet {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "bar",
    },
    "obj": Variable {
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "foo",
      },
    },
    "value": Binary {
      "left": DottedGet {
        "name": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "bar",
        },
        "obj": Variable {
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
        },
        "optional": false,
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 5,
        },
      },
      "token": {
        "isReserved": false,
        "kind": "StarEqual",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "*=",
      },
    },
  },
]
`;

exports[`parser indexed assignment dotted assigns anonymous functions 1`] = `
[
  DottedSet {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "bar",
    },
    "obj": Variable {
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "foo",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [],
      "returns": 10,
    },
  },
]
`;

exports[`parser indexed assignment dotted assigns boolean expressions 1`] = `
[
  DottedSet {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "bar",
    },
    "obj": Variable {
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "foo",
      },
    },
    "value": Binary {
      "left": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": BrsBoolean {
          "inArray": false,
          "kind": 2,
          "value": true,
        },
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": BrsBoolean {
          "inArray": false,
          "kind": 2,
          "value": false,
        },
      },
      "token": {
        "isReserved": true,
        "kind": "And",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "and",
      },
    },
  },
]
`;
